--- a/TestUrMind/Base.lproj/Main.storyboard
+++ b/TestUrMind/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,24 +15,24 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestUrMind" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xzY-kR-7Dm">
-                                <rect key="frame" x="10.666666666666657" y="70" width="393" height="118"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="xzY-kR-7Dm">
+                                <rect key="frame" x="8" y="70" width="304" height="118"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWT-HX-RuT">
-                                        <rect key="frame" x="0.0" y="0.0" width="160" height="118"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="88.5" height="118"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="118" id="9X1-O9-M7d"/>
-                                            <constraint firstAttribute="width" constant="160" id="llH-M8-zT6"/>
+                                            <constraint firstAttribute="width" constant="120" id="llH-M8-zT6"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="67"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bgy-VI-fWO">
-                                        <rect key="frame" x="168" y="0.0" width="57" height="118"/>
+                                        <rect key="frame" x="107.5" y="0.0" width="89" height="118"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="118" id="Dg0-CW-7FW"/>
                                             <constraint firstAttribute="width" constant="57" id="JUv-QL-HfP"/>
@@ -42,31 +42,31 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9if-E9-t1h">
-                                        <rect key="frame" x="233" y="0.0" width="160" height="118"/>
+                                        <rect key="frame" x="215.5" y="0.0" width="88.5" height="118"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="118" id="3KE-4k-hJm"/>
-                                            <constraint firstAttribute="width" constant="160" id="nlt-Tb-hhF"/>
+                                            <constraint firstAttribute="width" constant="120" id="nlt-Tb-hhF"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="67"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your answer" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sUS-wG-gAL">
-                                <rect key="frame" x="97" y="506" width="220" height="30"/>
+                                <rect key="frame" x="50" y="288" width="220" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="220" id="EtT-eT-mh6"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                 <connections>
                                     <action selector="theAnswer:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="KE5-M9-qbB"/>
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qpt-Jv-0V1">
-                                <rect key="frame" x="174.66666666666666" y="584" width="65" height="65"/>
+                                <rect key="frame" x="127.5" y="366" width="65" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="65" id="Guq-FM-7tV"/>
                                     <constraint firstAttribute="height" constant="65" id="omu-da-5yU"/>
@@ -80,10 +80,12 @@
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="xzY-kR-7Dm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3DR-LO-fYD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xzY-kR-7Dm" secondAttribute="trailing" constant="8" id="4nH-S0-YfA"/>
                             <constraint firstItem="xzY-kR-7Dm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="AQU-ef-7KA"/>
                             <constraint firstItem="Qpt-Jv-0V1" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="E9O-b6-X2N"/>
+                            <constraint firstItem="sUS-wG-gAL" firstAttribute="top" secondItem="xzY-kR-7Dm" secondAttribute="bottom" constant="100" id="LPt-NY-foc"/>
                             <constraint firstItem="sUS-wG-gAL" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="luG-A9-hSb"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sUS-wG-gAL" secondAttribute="bottom" constant="200" id="xmc-LX-0oB"/>
+                            <constraint firstItem="xzY-kR-7Dm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="rWB-Dh-XUz"/>
                             <constraint firstItem="Qpt-Jv-0V1" firstAttribute="top" secondItem="sUS-wG-gAL" secondAttribute="bottom" constant="48" id="yZt-Yp-Pdv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
