--- a/TestUrMind/Base.lproj/Main.storyboard
+++ b/TestUrMind/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,78 +15,86 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestUrMind" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="xzY-kR-7Dm">
-                                <rect key="frame" x="8" y="70" width="304" height="118"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j6Z-l4-fcE">
+                                <rect key="frame" x="0.0" y="230.5" width="320" height="249.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWT-HX-RuT">
-                                        <rect key="frame" x="0.0" y="0.0" width="88.5" height="118"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qpt-Jv-0V1">
+                                        <rect key="frame" x="0.0" y="199.5" width="320" height="50"/>
+                                        <color key="backgroundColor" red="0.99942404029999998" green="0.88872701465798087" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="118" id="9X1-O9-M7d"/>
-                                            <constraint firstAttribute="width" constant="120" id="llH-M8-zT6"/>
+                                            <constraint firstAttribute="height" constant="50" id="vHQ-9s-zIi"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bgy-VI-fWO">
-                                        <rect key="frame" x="107.5" y="0.0" width="89" height="118"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
+                                        <state key="normal" title="NEXT">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="pressedNextBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VNt-h9-lJT"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Qpt-Jv-0V1" secondAttribute="bottom" id="10R-2R-eot"/>
+                                    <constraint firstItem="Qpt-Jv-0V1" firstAttribute="centerX" secondItem="j6Z-l4-fcE" secondAttribute="centerX" id="CMh-S7-1gi"/>
+                                    <constraint firstAttribute="trailing" secondItem="Qpt-Jv-0V1" secondAttribute="trailing" id="LWj-ha-mUC"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="OAl-oy-S0J"/>
+                                    <constraint firstItem="Qpt-Jv-0V1" firstAttribute="leading" secondItem="j6Z-l4-fcE" secondAttribute="leading" id="crs-Ng-cWM"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="nKS-WF-iYn">
+                                <rect key="frame" x="0.0" y="80" width="320" height="118.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="xzY-kR-7Dm">
+                                        <rect key="frame" x="23" y="0.0" width="274" height="68.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWT-HX-RuT">
+                                                <rect key="frame" x="0.0" y="0.0" width="124.5" height="68.5"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="48"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bgy-VI-fWO">
+                                                <rect key="frame" x="126.5" y="0.0" width="21" height="68.5"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="50"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9if-E9-t1h">
+                                                <rect key="frame" x="149.5" y="0.0" width="124.5" height="68.5"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="48"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your answer" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sUS-wG-gAL">
+                                        <rect key="frame" x="50" y="88.5" width="220" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="118" id="Dg0-CW-7FW"/>
-                                            <constraint firstAttribute="width" constant="57" id="JUv-QL-HfP"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="220" id="EtT-eT-mh6"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                         <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9if-E9-t1h">
-                                        <rect key="frame" x="215.5" y="0.0" width="88.5" height="118"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="118" id="3KE-4k-hJm"/>
-                                            <constraint firstAttribute="width" constant="120" id="nlt-Tb-hhF"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                        <connections>
+                                            <action selector="theAnswer:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="KE5-M9-qbB"/>
+                                        </connections>
+                                    </textField>
                                 </subviews>
                             </stackView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your answer" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sUS-wG-gAL">
-                                <rect key="frame" x="50" y="288" width="220" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="220" id="EtT-eT-mh6"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                <connections>
-                                    <action selector="theAnswer:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="KE5-M9-qbB"/>
-                                </connections>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qpt-Jv-0V1">
-                                <rect key="frame" x="127.5" y="366" width="65" height="65"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="65" id="Guq-FM-7tV"/>
-                                    <constraint firstAttribute="height" constant="65" id="omu-da-5yU"/>
-                                </constraints>
-                                <state key="normal" title="NEXT"/>
-                                <connections>
-                                    <action selector="pressedNextBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VNt-h9-lJT"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="xzY-kR-7Dm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3DR-LO-fYD"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xzY-kR-7Dm" secondAttribute="trailing" constant="8" id="4nH-S0-YfA"/>
-                            <constraint firstItem="xzY-kR-7Dm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="AQU-ef-7KA"/>
-                            <constraint firstItem="Qpt-Jv-0V1" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="E9O-b6-X2N"/>
-                            <constraint firstItem="sUS-wG-gAL" firstAttribute="top" secondItem="xzY-kR-7Dm" secondAttribute="bottom" constant="100" id="LPt-NY-foc"/>
-                            <constraint firstItem="sUS-wG-gAL" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="luG-A9-hSb"/>
-                            <constraint firstItem="xzY-kR-7Dm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="rWB-Dh-XUz"/>
-                            <constraint firstItem="Qpt-Jv-0V1" firstAttribute="top" secondItem="sUS-wG-gAL" secondAttribute="bottom" constant="48" id="yZt-Yp-Pdv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="j6Z-l4-fcE" secondAttribute="trailing" id="9pT-C1-VkQ"/>
+                            <constraint firstItem="j6Z-l4-fcE" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="AiI-s4-Pqa"/>
+                            <constraint firstItem="j6Z-l4-fcE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LaV-YF-uOT"/>
+                            <constraint firstItem="nKS-WF-iYn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="MOy-qw-Dae"/>
+                            <constraint firstItem="nKS-WF-iYn" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="80" id="f0W-8d-wp7"/>
+                            <constraint firstItem="j6Z-l4-fcE" firstAttribute="top" secondItem="nKS-WF-iYn" secondAttribute="bottom" constant="32" id="gh7-dT-SpB"/>
+                            <constraint firstItem="nKS-WF-iYn" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="psp-hc-vFz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -100,7 +108,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.23188405797103" y="99.456521739130437"/>
+            <point key="canvasLocation" x="122" y="188"/>
         </scene>
     </scenes>
 </document>
